# todo_app

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  database.py  main.py  models.py
app/api/: errors.py
app/api/routes/: api.py  tasks.py
tests/: conftest.py  data.py  test_crud.py  test_find_task.py  test_get_sorts.py  test_get_tasks.py  test_root.py
