[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "FastAPI ToDo web application"
authors = ["Dmitry Barsukoff <riZZZhik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-commas = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-comprehensions = "^3.10.0"
flake8-pep3101 = "^2.0.0"
flake8-docstrings = "^1.6.0"
flake8-module-name = "^0.2.0"
flake8-string-format = "^0.3.0"
flake8-print = "^5.0.0"
flake8-builtins = "^2.0.0"
flake8-bugbear = "^22.9.23"
isort = "^5.12.0"
mypy = "^1.4.1"
xenon = "^0.9.0"
refurb = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

####################################################################################################
# Linters configuration
####################################################################################################

[tool.mypy]
python_version = "3.11"
mypy_path = "./app"

warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
disallow_any_explicit = false
follow_imports = "silent"
no_implicit_reexport = true

[tool.xenon]
xenon_max_absolute = "B"
xenon_max_modules = "B"
xenon_max_average = "A"

[tool.isort]
profile = "black"
py_version = 311
line_length = 100
wrap_length = 100
color_output = true

[tool.black]
line-length = 100
target-version = ['py311']
